--- a/app/index.html
+++ b/app/index.html
@@ -50,9 +50,12 @@
 
 
     <script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.5/p5.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.5/addons/p5.sound.min.js"></script>
-   
+    
+    <!-- build:js scripts/vendor.js -->
+    <script src="scripts/p5.min.js"></script>
+    <script src="scripts/p5.sound.min.js"></script>
+    <!-- endbuild -->
+
     <!-- build:js scripts/main.js -->
     <script src="scripts/main.js"></script>
     <!-- endbuild -->
