use bower for scripts

--- a/app/index.html
+++ b/app/index.html
@@ -48,16 +48,12 @@
       ga('send', 'pageview');
     </script>
 
-
-    <script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
-    
-    <!-- build:js scripts/vendor.js -->
-    <script src="scripts/p5.min.js"></script>
-    <script src="scripts/p5.sound.min.js"></script>
-    <!-- endbuild -->
-
+    <script src="bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="bower_components/p5js/lib/p5.min.js"></script>
+    <script src="bower_components/p5js/lib/addons/p5.sound.min.js"></script>
     <!-- build:js scripts/main.js -->
     <script src="scripts/main.js"></script>
     <!-- endbuild -->
+
 </body>
 </html>
